<resources>
    <string name="app_name">Jugando Con Intents</string>
    <string name="nombre">Nombre</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="registrarse">Registrarse</string>
    <string name="autor_de_la_app">Autor de la App</string>
    <string name="contrase_a">Contraseña</string>
    <string name="he_le_do_y_acepto_los_terminos_y_condiciones">He leído y acepto los Terminos y Condiciones</string>
    <string name="registrarme_e_ingresar">Registrarme e Ingresar</string>
    <string name="terminos_y_condiciones">Terminos Y Condiciones</string>
    <string name="textoterminos" translatable="false">Section 1.10.32 of , written by Cicero in 45 BC Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? KJASBkjdabn ckjas ckla c Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="textoblockchain">La forma más fácil de enviar, recibir, guardar y operar con monedas digitales. La empresa global de criptomonedas más importante y confiable.</string>
    <string name="con_cenos">Conócenos</string>
    <string name="autor_de">Autor de la App</string>
    <string name="autor" translatable="false">Matias Draeger</string>
    <string name="mail_matmaxdrae_gmail_com" translatable="false">MAIL: matmaxdrae@gmail.com</string>
    <string name="repositorio_de_github">Repositorio de Github</string>
    <string name="telefono_personal">Telefono Personal</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="a_n_no_estas_registrado_click_aqu">Aún no estas registrado? Click Aquí</string>
    <string name="ingresar">Ingresar</string>
    <string name="blockchain" translatable="false">Blockchain</string>
</resources>
